# arrow-nanoarrow

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  WORKSPACE
examples/linesplitter/: BUILD
examples/vendored-ipc/: BUILD
examples/vendored-minimal/: BUILD
extensions/nanoarrow_ipc/src/apps/: BUILD
extensions/nanoarrow_ipc/src/nanoarrow/: BUILD
src/nanoarrow/: BUILD
