module(name="nanoarrow", version="0.4.0")

bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.3", dev_dependency = True)
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "zlib", version = "1.3")

bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "zstd", version = "1.5.5")
bazel_dep(name = "bzip2", version = "1.0.8")

# bazel_dep(name = "bazel_skylib", version = "1.5.0")
# bazel_dep(name = "gflags", version = "2.2.2", dev_dependency = True)
# bazel_dep(name = "boringssl", version = "0.0.0-20240126-22d349c")
# # Used by xsimd
# bazel_dep(name = "doctest", version = "2.4.11", dev_dependency = True)
# # needed by flatbuffers
bazel_dep(name = "aspect_rules_js", version = "1.37.1")
# bazel_dep(name = "aspect_rules_ts", version = "2.1.1")
# bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
# bazel_dep(name = "rules_swift", version = "1.15.1", repo_name = "build_bazel_rules_swift")
# bazel_dep(name = "rules_go", version = "0.45.1", repo_name = "io_bazel_rules_go")
# bazel_dep(name = "aspect_rules_esbuild", version = "0.18.0")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "5.8.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")