module(name="nanoarrow", version="0.4.0")

bazel_dep(name = "arrow", version = "0.0.1", dev_dependency = True)

# Remove this if not working locally
local_path_override(
    module_name = "arrow",
    path = "../arrow",
)

bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.3", dev_dependency = True)
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "zlib", version = "1.3")
